Fixed a small visual bug, added higher z-index to form headers

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -21,6 +21,7 @@
 .form__section__header {
     position: sticky;
     top: 0;
+    z-index: 2;
 
     padding-top: 1rem;
     padding-bottom: .5rem;
